--- a/views/clientes.ejs
+++ b/views/clientes.ejs
@@ -71,7 +71,7 @@
                             required
                           />
                           <div
-                            class="invalid-tooltip position-absolute top-0 end-0 translate-end"
+                            class="invalid-feedback"
                           >
                             Es necesario el Nombre
                           </div>
@@ -90,7 +90,7 @@
                             required
                           />
                           <div
-                            class="invalid-tooltip position-absolute top-0 end-0 translate-end"
+                            class="invalid-feedback"
                           >
                             Es necesario el Apellido
                           </div>
@@ -108,7 +108,7 @@
                             required
                           />
                           <div
-                            class="invalid-tooltip position-absolute top-0 end-0 translate-end"
+                            class="invalid-feedback"
                           >
                             Es necesario número teléfonico
                           </div>
@@ -124,7 +124,7 @@
                             required
                           />
                           <div
-                            class="invalid-tooltip position-absolute top-0 end-0 translate-end"
+                            class="invalid-feedback"
                           >
                             Es necesario número de cédula
                           </div>
@@ -152,7 +152,7 @@
                             <option value="VII">VII</option>
                           </select>
                           <div
-                            class="invalid-tooltip position-absolute top-0 end-0 translate-end"
+                            class="invalid-feedback"
                           >
                             Es necesario el Distrito
                           </div>
@@ -171,7 +171,7 @@
                             required
                           />
                           <div
-                            class="invalid-tooltip position-absolute top-0 end-0 translate-end"
+                            class="invalid-feedback"
                           >
                             Es necesario la zona de residencia
                           </div>
@@ -189,7 +189,7 @@
                             required
                           />
                           <div
-                            class="invalid-tooltip position-absolute top-0 end-0 translate-end"
+                            class="invalid-feedback"
                           >
                             Solicitamos un punto de Referencia
                           </div>
@@ -219,7 +219,7 @@
                             required
                           />
                           <div
-                            class="invalid-tooltip position-absolute top-0 end-0 translate-end"
+                            class="invalid-feedback"
                           >
                             Es necesario el número de Casa
                           </div>
